# x1-tap-clock

./: Cargo.toml  LICENSE  README.md
src/: link_controller.rs  main.rs  midi_clock.rs  tap_tempo.rs
src/x1_controller/: mod.rs  x1_controller.rs  x1_state.rs
udev/: 99-traktor-x1.rules
