[package]
name = "x1-tap-clock"
version = "1.1.1"
edition = "2021"
description = "Tap-tempo Ableton Link controller for the Kontrol X1 Mk1"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
rusb = "0.9"
ableton-link = "0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"

[package.metadata.bundle]
name = "X1 Tap Clock"
identifier = "io.github.opa-.x1-tap-clock"
icon = ["128x128@2x.png"]
category = "public.app-category.music"
resources = ["board.yml"]
